updated the website

--- a/bio/readings.html
+++ b/bio/readings.html
@@ -41,11 +41,11 @@ MathJax.Hub.Config({
 <table class="imgtable"><tr><td>
 <img src="drawing_book.png" alt="Drawing of books" width="100px" />&nbsp;</td>
 <td align="left"><p>Unless otherwise noted, all reading assignments are from the 
-<a href="http://www.stanford.edu/~boyd/cvxbook/" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
+<a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
 </td></tr></table>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-15 11:40:39 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-15 11:51:53 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
