updated the website

--- a/bio/home.html
+++ b/bio/home.html
@@ -20,7 +20,7 @@ MathJax.Hub.Config({
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Convex Optimization</div>
+<div class="menu-category">Topics in Mathematical Biology</div>
 <div class="menu-item"><a href="home.html" class="current">Home</a></div>
 <div class="menu-item"><a href="courseinfo.html">Course&nbsp;info</a></div>
 <div class="menu-item"><a href="contact.html">Contact</a></div>
@@ -30,8 +30,13 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
+<div class="menu-category">COBRA*</div>
+<div class="menu-item"><a href="https://opencobra.github.io/cobratoolbox/">COBRA</a></div>
+<div class="menu-item"><a href="https://opencobra.github.io/cobrapy/">COBRApy</a></div>
+<div class="menu-item"><a href="https://opencobra.github.io/COBRA.jl">COBRA.jl</a></div>
 <div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://quera.ir/course/6014/">Quera</a></div>
+<div class="menu-item"><a href="http://www.stanford.edu/class/ee364a/">22494&nbsp;Convex&nbsp;Optimization</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -57,7 +62,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-15 12:18:21 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-15 12:29:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
