updated the website

--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -36,7 +36,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="https://opencobra.github.io/COBRA.jl">COBRA.jl</a></div>
 <div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://quera.ir/course/6014/">Quera</a></div>
-<div class="menu-item"><a href="http://www.stanford.edu/class/ee364a/">22494&nbsp;Convex&nbsp;Optimization</a></div>
+<div class="menu-item"><a href="../cvx/home.html">22494&nbsp;Convex&nbsp;Optimization</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -68,10 +68,10 @@ also serve as their office hours, starting the second week of class. Attendance 
 
 You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" target=&ldquo;blank&rdquo;>COBRA</a> toolbox (Matlab),
 <a href="https://opencobra.github.io/cobrapy/" target=&ldquo;blank&rdquo;>COBRApy</a> (Python), or
-<a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia), to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.</p>
+<a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia) to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-15 12:29:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-15 12:36:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
