--- a/bio/contact.html
+++ b/bio/contact.html
@@ -36,7 +36,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="https://opencobra.github.io/COBRA.jl">COBRA.jl</a></div>
 <div class="menu-category">External links</div>
 <div class="menu-item"><a href="https://quera.ir/course/6014/">Quera</a></div>
-<div class="menu-item"><a href="http://www.stanford.edu/class/ee364a/">22494&nbsp;Convex&nbsp;Optimization</a></div>
+<div class="menu-item"><a href="../cvx/home.html">22494&nbsp;Convex&nbsp;Optimization</a></div>
 </td>
 <td id="layout-content">
 <div id="toptitle">
@@ -58,7 +58,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-15 12:29:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-15 12:36:38 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
