updated the website

--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -68,10 +68,20 @@ also serve as their office hours, starting the second week of class. Attendance 
 
 You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" target=&ldquo;blank&rdquo;>COBRA</a> toolbox (Matlab),
 <a href="https://opencobra.github.io/cobrapy/" target=&ldquo;blank&rdquo;>COBRApy</a> (Python), or
-<a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia) to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.</p>
+<a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia) to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.
+</p>
+<h2>Intended audience</h2>
+<p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields:</p>
+<ul>
+<li><p>Mathematical Sciences (especially computer science and applied mathematics); </p>
+</li>
+<li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).
+The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Operations Research.</p>
+</li>
+</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-17 22:13:20 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-18 14:54:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
