updated the website

--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -70,18 +70,33 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <a href="https://opencobra.github.io/cobrapy/" target=&ldquo;blank&rdquo;>COBRApy</a> (Python), or
 <a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia) to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.
 </p>
+<h2>Catalog description</h2>
+<p>This course discusses computational systems biology focusing on select topics in metabolomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.
+</p>
+<h2>Course objectives</h2>
+<ul>
+<li><p>to present the basic theory of optimization methods, concentrating on results that arise in systems biology applications</p>
+</li>
+<li><p>to give students the background required to use the methods in their own research work or applications</p>
+</li>
+<li><p>to give students the tools and training to understand and simulate models of metabolic pathways/networks dynamics</p>
+</li>
+<li><p>to give students a thorough understanding of how such models are analyzed, and some experience in analyzing them
+</p>
+</li>
+</ul>
 <h2>Intended audience</h2>
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields:</p>
 <ul>
 <li><p>Mathematical Sciences (especially computer science and applied mathematics); </p>
 </li>
-<li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).
-The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Operations Research.</p>
+<li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).<br />
+The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology, Operations Research.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-18 14:54:13 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-18 15:36:18 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
