updated the website

--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -77,7 +77,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <ul>
 <li><p>to present the basic theory of optimization methods, concentrating on results that arise in systems biology applications</p>
 </li>
-<li><p>to give students the background required to use the methods in their own research work or applications</p>
+<li><p>to give students the background required to use the optimization methods in their own research work or applications</p>
 </li>
 <li><p>to give students the tools and training to understand and simulate models of metabolic pathways/networks dynamics</p>
 </li>
@@ -90,13 +90,14 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <ul>
 <li><p>Mathematical Sciences (especially computer science and applied mathematics); </p>
 </li>
-<li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).<br />
+<li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).
+
 The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology, Operations Research.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-18 15:36:18 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-18 15:40:58 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
