updated the website

--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -61,7 +61,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </li>
 </ul>
 <h2>Textbook and optional references</h2>
-<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>.
+<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text.
 </p>
 <h2>Prerequisites</h2>
 <p>Good knowledge of convex optimization (as in 22494), and exposure to bioinformatics.<br />
@@ -92,12 +92,13 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 </li>
 <li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).
 
+
 The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology, Operations Research.</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-18 15:40:58 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-18 15:50:18 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
