--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -86,19 +86,10 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 </li>
 </ul>
 <h2>Intended audience</h2>
-<p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields:</p>
-<ul>
-<li><p>Mathematical Sciences (especially computer science and applied mathematics); </p>
-</li>
-<li><p>Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism).
-
-
-The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology, Operations Research.</p>
-</li>
-</ul>
+<p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-18 15:50:18 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-18 16:01:11 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
