--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Lectures</h2>
-<p>Lectures are Saturdays and Mondays, 3:00&ndash;5:00 pm,  via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vclass.ecourse.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
+<p>Lectures are Saturdays and Mondays, 3:00&ndash;5:00 pm, and are live streamed online via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vclass.ecourse.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
 
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester, but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars but the recorded videos are available <a href="https://www.aparat.com/mtefagh" target=&ldquo;blank&rdquo;>here</a>.
 </p>
@@ -71,7 +71,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia) to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.
 </p>
 <h2>Catalog description</h2>
-<p>This course discusses computational systems biology focusing on select topics in metabolomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.
+<p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.
 </p>
 <h2>Course objectives</h2>
 <ul>
@@ -89,7 +89,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-18 16:01:11 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-19 19:01:21 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
