--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -61,7 +61,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </li>
 </ul>
 <h2>Textbook and optional references</h2>
-<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text.
+<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
 </p>
 <h2>Prerequisites</h2>
 <p>Good knowledge of convex optimization (as in 22494), and exposure to bioinformatics.<br />
@@ -89,7 +89,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-07-22 08:15:31 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-07-28 09:28:32 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
