--- a/bio/home.html
+++ b/bio/home.html
@@ -45,7 +45,7 @@ MathJax.Hub.Config({
 </div>
 <div class="infoblock">
 <div class="blockcontent">
-<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: TBD | Prerequisite: Convex Optimization</p>
+<p>Term: Fall 2020 | Units: 4 | Section: 01 | Students enrolled: TBD | Lectures: Sat, Mon 3:00&ndash;5:00pm | Exam Date/Time: 1/18/21 9:00am | Prerequisite: Convex Optimization</p>
 </div></div>
 <table class="imgtable"><tr><td>
 <img src="../metnet_logo.png" alt="A metabolic network" width="250px" />&nbsp;</td>
@@ -62,7 +62,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-08-12 12:51:36 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-08-20 09:55:45 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
