--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -45,9 +45,9 @@ MathJax.Hub.Config({
 </div>
 </div>
 <h2>Lectures</h2>
-<p>Lectures are Saturdays and Mondays, 3:00&ndash;5:00 pm, and are live streamed online via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vclass.ecourse.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
+<p>Lectures are Saturdays and Mondays, 3:00&ndash;5:00 pm, and are live streamed online via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>. Click <a href="https://vc.sharif.edu/help/" target=&ldquo;blank&rdquo;>here</a> to learn more about our webinars.<br />
 
-Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester, but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars but the recorded videos are available <a href="https://www.aparat.com/mtefagh" target=&ldquo;blank&rdquo;>here</a>.
+Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available <a href="https://www.aparat.com/mtefagh" target=&ldquo;blank&rdquo;>here</a>.
 </p>
 <h2>Office hours</h2>
 <p><b>Mojtaba Tefagh's office hours:</b> Saturdays, 5:00&ndash;6:00 pm, via <a href="https://vclass.ecourse.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
@@ -63,6 +63,21 @@ also serve as their office hours, starting the second week of class. Attendance 
 <h2>Textbook and optional references</h2>
 <p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
 </p>
+<h2>Course requirements and grading</h2>
+<ol>
+<li><p><b> Project requirements:</b></p>
+<ol>
+<li><p><i> Initial proposal</i>. title <tt> team members (max size of 3 students) </tt> 1-page description of concept and methods (excluding references) </p>
+</li>
+<li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) <tt> next steps and intended experiments </tt> contributions of each team member</p>
+</li>
+<li><p><i>Final Writeup</i>. report (maximum 5 pages long) <tt> link to the GitHub repository </tt> contributions of each team member</p>
+</li></ol>
+</li>
+<li><p><b>Grading:</b> Homework 30%, project 70%. These weights are approximate; we reserve the right to change them later.<br />
+</p>
+</li>
+</ol>
 <h2>Prerequisites</h2>
 <p>Good knowledge of convex optimization (as in 22494), and exposure to bioinformatics.<br />
 
@@ -89,7 +104,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-08-24 13:00:25 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-18 15:55:59 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
