--- a/bio/contact.html
+++ b/bio/contact.html
@@ -26,7 +26,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="contact.html" class="current">Contact</a></div>
 <div class="menu-category">Course materials</div>
 <div class="menu-item"><a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902/">Textbook</a></div>
-<div class="menu-item"><a href="https://vclass.ecourse.sharif.edu/ch/mtefagh">Webinars</a></div>
+<div class="menu-item"><a href="https://vc.sharif.edu/ch/mtefagh">Webinars</a></div>
 <div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
@@ -58,7 +58,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-18 15:55:59 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-18 15:58:23 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
