--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -67,11 +67,11 @@ also serve as their office hours, starting the second week of class. Attendance 
 <ol>
 <li><p><b> Project requirements:</b></p>
 <ol>
-<li><p><i> Initial proposal</i>. title <tt> team members (max size of 3 students) </tt> 1-page description of concept and methods (excluding references) </p>
+<li><p><i> Initial proposal</i>. title + team members (max size of 3 students) + 1-page description of concept and methods (excluding references) </p>
 </li>
-<li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) <tt> next steps and intended experiments </tt> contributions of each team member</p>
+<li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) + next steps and intended experiments + contributions of each team member</p>
 </li>
-<li><p><i>Final Writeup</i>. report (maximum 5 pages long) <tt> link to the GitHub repository </tt> contributions of each team member</p>
+<li><p><i>Final Writeup</i>. report (maximum 5 pages long) + link to the GitHub repository + contributions of each team member</p>
 </li></ol>
 </li>
 <li><p><b>Grading:</b> Homework 30%, project 70%. These weights are approximate; we reserve the right to change them later.<br />
@@ -104,7 +104,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-18 15:58:23 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-18 16:01:55 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
