--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -65,7 +65,7 @@ also serve as their office hours, starting the second week of class. Attendance 
 </p>
 <h2>Course requirements and grading</h2>
 <ol>
-<li><p><b> Project requirements:</b></p>
+<li><p><b> Project deliverables:</b></p>
 <ol>
 <li><p><i> Initial proposal</i>. title + team members (max size of 3 students) + 1-page description of concept and methods (excluding references) </p>
 </li>
@@ -104,7 +104,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-18 16:01:55 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-18 16:05:20 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
