updated the website

--- a/bio/contact.html
+++ b/bio/contact.html
@@ -53,12 +53,14 @@ MathJax.Hub.Config({
 </p>
 <h2>Teaching assistants</h2>
 <ul>
-<li><p>Mohammad Hossein Moteallehi, Biology TA</p>
+<li><p>Mohammad Hosein Moteallehi, Biology TA</p>
+</li>
+<li><p>Amir Hosein Hemat, Optimization TA</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-18 16:05:20 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-19 13:43:05 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
