--- a/bio/readings.html
+++ b/bio/readings.html
@@ -48,9 +48,14 @@ MathJax.Hub.Config({
 <td align="left"><p>Unless otherwise noted, all reading assignments are from the 
 <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>textbook</a>. We'll be adding to them over the semester.<br /></p>
 </td></tr></table>
+<ol>
+<li><p>By the end of 1st week (9/25/20): Chapter 1-Mathematical Optimization Fundamentals.
+</p>
+</li>
+</ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-18 16:05:20 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-19 13:43:05 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
