updated the website

--- a/bio/contact.html
+++ b/bio/contact.html
@@ -55,12 +55,12 @@ MathJax.Hub.Config({
 <ul>
 <li><p>Mohammad Hosein Moteallehi, Biology TA</p>
 </li>
-<li><p>Amir Hosein Hemat, Optimization TA</p>
+<li><p>Amir Hosein Hematyar, Optimization TA</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-19 13:46:12 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-20 10:23:57 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
