updated the website

--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -57,3 +57,60 @@ The TAs will offer informal working sessions, that will
 also serve as their office hours, starting the second week of class. Attendance is not required. </p>
 <ul>
 <li><p>Mohammad Hosein Moteallehi: Mondays, 6:00&ndash;7:00 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
+</li>
+<li><p>Amir Hosein Hematyar: Tuesdays, 5:00&ndash;6:00 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
+</p>
+</li>
+</ul>
+<h2>Textbook and optional references</h2>
+<p>The textbook is <a href="https://onlinelibrary.wiley.com/doi/book/10.1002/9781119188902" target=&ldquo;blank&rdquo;>Optimization Methods in Metabolic Networks</a>. <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> can serve as an auxiliary text. Moreover, we will use the <a href="http://works.bepress.com/scott_hinton/41/" target=&ldquo;blank&rdquo;>constraint-based modeling lectures</a> from a course on metabolic modeling taught by Scott Hinton.
+</p>
+<h2>Course requirements and grading</h2>
+<ol>
+<li><p><b> Project deliverables:</b></p>
+<ol>
+<li><p><i> Initial proposal</i>. title + team members (max size of 3 students) + 1-page description of concept and methods (excluding references) </p>
+</li>
+<li><p><i>Milestone report</i>. early draft of at most 3 pages (including annexes and figures) + next steps and intended experiments + contributions of each team member</p>
+</li>
+<li><p><i>Final Writeup</i>. report (maximum 5 pages long) + link to the GitHub repository + contributions of each team member</p>
+</li></ol>
+</li>
+<li><p><b>Grading:</b> Homework 30%, project 70%. These weights are approximate; we reserve the right to change them later.<br />
+</p>
+</li>
+</ol>
+<h2>Prerequisites</h2>
+<p>Good knowledge of convex optimization (as in 22494), and exposure to bioinformatics.<br />
+
+You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" target=&ldquo;blank&rdquo;>COBRA</a> toolbox (Matlab),
+<a href="https://opencobra.github.io/cobrapy/" target=&ldquo;blank&rdquo;>COBRApy</a> (Python), or
+<a href="https://opencobra.github.io/COBRA.jl" target=&ldquo;blank&rdquo;>COBRA.jl</a> (Julia) to write simple scripts, so basic familiarity with elementary programming will be required. We refer to COBRA, COBRApy, and COBRA.jl collectively as COBRA*.
+</p>
+<h2>Catalog description</h2>
+<p>This course discusses computational systems biology focusing on select topics in fluxomics in a well-balanced mixture of biology, mathematics, and computer science. We start by looking in detail at the mathematical underpinning of constraint-based analysis of genome-scale metabolic network reconstructions and provide a foundation for the analysis of optimization algorithms involved. Subsequently, we provide an overview of various papers and toolboxes from the literature in the remainder of the semester. Students will explore concepts through a research-oriented term project that will require them to define goals, success metrics, and deliverables for a computational challenge in systems biology and implement and evaluate a solution.
+</p>
+<h2>Course objectives</h2>
+<ul>
+<li><p>to present the basic theory of optimization methods, concentrating on results that arise in systems biology applications</p>
+</li>
+<li><p>to give students the background required to use the optimization methods in their own research work or applications</p>
+</li>
+<li><p>to give students the tools and training to understand and simulate models of metabolic pathways/networks dynamics</p>
+</li>
+<li><p>to give students a thorough understanding of how such models are analyzed, and some experience in analyzing them
+</p>
+</li>
+</ul>
+<h2>Intended audience</h2>
+<p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
+<div id="footer">
+<div id="footer-text">
+Page generated 2020-09-20 10:26:39 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+</div>
+</div>
+</td>
+</tr>
+</table>
+</body>
+</html>
