updated the website

--- a/bio/contact.html
+++ b/bio/contact.html
@@ -30,6 +30,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-category">COBRA*</div>
 <div class="menu-item"><a href="https://opencobra.github.io/cobratoolbox/">COBRA</a></div>
 <div class="menu-item"><a href="https://opencobra.github.io/cobrapy/">COBRApy</a></div>
@@ -60,7 +61,7 @@ MathJax.Hub.Config({
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-20 21:11:59 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-28 08:46:29 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
