--- a/bio/courseinfo.html
+++ b/bio/courseinfo.html
@@ -30,6 +30,7 @@ MathJax.Hub.Config({
 <div class="menu-item"><a href="http://ocw.sharif.edu/teacher/id//128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html">OCW</a></div>
 <div class="menu-category">Assignments</div>
 <div class="menu-item"><a href="readings.html">Readings</a></div>
+<div class="menu-item"><a href="projects.html">Projects</a></div>
 <div class="menu-category">COBRA*</div>
 <div class="menu-item"><a href="https://opencobra.github.io/cobratoolbox/">COBRA</a></div>
 <div class="menu-item"><a href="https://opencobra.github.io/cobrapy/">COBRApy</a></div>
@@ -50,15 +51,15 @@ MathJax.Hub.Config({
 Videos of all in-class lectures will be available on <a href="http://ocw.sharif.edu/teacher/id/128/%D9%85%D8%AC%D8%AA%D8%A8%DB%8C-%D8%AA%D9%81%D8%A7%D9%82.html" target=&ldquo;blank&rdquo;>OCW</a> shortly after the end of the semester but should not be considered a substitute for coming to class. You are encouraged to attend the live webinars, but the recorded videos are available <a href="https://www.aparat.com/mtefagh" target=&ldquo;blank&rdquo;>here</a>.
 </p>
 <h2>Office hours</h2>
-<p><b>Mojtaba Tefagh's office hours:</b> Saturdays, 5:00&ndash;6:00 pm, via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
+<p><b>Mojtaba Tefagh's office hours:</b> Saturdays and Mondays, 5:00&ndash;5:30 pm, via <a href="https://vc.sharif.edu/ch/mtefagh" target=&ldquo;blank&rdquo;>webinar</a>.<br /><br />
 
 <b>TA office hours:</b>
 The TAs will offer informal working sessions, that will
 also serve as their office hours, starting the second week of class. Attendance is not required. </p>
 <ul>
-<li><p>Mohammad Hosein Moteallehi: Mondays, 6:00&ndash;7:00 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
+<li><p>Mohammad Hosein Moteallehi: Mondays, 5:30&ndash;6:30 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a></p>
 </li>
-<li><p>Amir Hosein Hematyar: Tuesdays, 5:00&ndash;6:00 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
+<li><p>Amir Hosein Hematyar: Saturdays, 5:30&ndash;6:30 pm, via <a href="https://vc.sharif.edu/ch/t.mogtaba" target=&ldquo;blank&rdquo;>webinar</a>
 </p>
 </li>
 </ul>
@@ -106,7 +107,7 @@ You will use one of the <a href="https://opencobra.github.io/cobratoolbox/" targ
 <p>This course should benefit anyone who uses or will use optimization methods in systems biology or related work (e.g., computational biology, bioinformatics). More specifically, people from the following departments and fields: Mathematical Sciences (especially computer science and applied mathematics); Biochemistry (especially areas like molecular biology, cell biology, enzymology, metabolism). The course may be useful to students and researchers in several other fields as well: Computational Mathematics, Computer Engineering, Biotechnology.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-20 21:11:59 Iran Daylight Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-28 08:46:29 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
