updated the website

--- a/bio/projects.html
+++ b/bio/projects.html
@@ -48,9 +48,15 @@ MathJax.Hub.Config({
 <img src="project.png" alt="Project" width="100px" />&nbsp;</td>
 <td align="left"><p>We will update this page with more information about the project ideas soon.<br /></p>
 </td></tr></table>
+<h3>Flux inhibition analysis</h3>
+<p>Chapter 5 of <a href="https://searchworks.stanford.edu/view/13249450" target=&ldquo;blank&rdquo;>Applications of convex optimization in metabolic network analysis</a> is an incomplete work which needs an efficient implementation and further analysis of biological fidelity through investigating examples in real-world genome-scale models.</p>
+<h3>Sparsity pattern of stoichiometry matrix</h3>
+<p>Although permuting the rows and columns of a stoichiometry matrix does not change the metabolic model, it changes the sparsity pattern of the matrix. A suite of sparse matrix storage algorithms exists which can be utilized to potentially decompose the metabolic network by searching pivoting sequences. For instance, if the metabolites and reactions of a microorganism can be ordered such that the corresponding stoichiometry matrix has a block-arrow sparsity pattern, then it means that there exist currency metabolites and core reactions whose removal decomposes the model into several subnetworks.  </p>
+<h3>Application of symbolic and algebraic computation</h3>
+<p>Whenever there is uncertainty about entries, for example in the biomass vector, can we calculate some of the desired properties by assuming only the sparsity pattern and not the numeric value of coefficients? The answer to this question is also of conceptual interest, as it shows which emergent properties are the consequence of exact numerical values and which ones are not.</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-28 08:48:34 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-09-28 10:36:02 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
