--- a/bio/readings.html
+++ b/bio/readings.html
@@ -52,14 +52,20 @@ MathJax.Hub.Config({
 <ol>
 <li><p>By the end of 1st week (9/25/20): Chapter 1-Mathematical Optimization Fundamentals.</p>
 </li>
-<li><p>By the end of 2nd week (10/2/20): Chapter 2-LP and Duality Theory.
+<li><p>By the end of 2nd week (10/2/20): Chapter 2-LP and Duality Theory.</p>
+</li>
+<li><p>By the end of 3rd week (10/9/20): Chapter 3-Flux Balance Analysis and LP Problems.</p>
+</li>
+<li><p>By the end of 4rd week (10/16/20): <a href="IPM/Presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.
+
+
 
 </p>
 </li>
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-09-28 10:36:02 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-01 21:14:40 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
