--- a/bio/readings.html
+++ b/bio/readings.html
@@ -56,7 +56,7 @@ MathJax.Hub.Config({
 </li>
 <li><p>By the end of 3rd week (10/9/20): Chapter 3-Flux Balance Analysis and LP Problems.</p>
 </li>
-<li><p>By the end of 4rd week (10/16/20): <a href="IPM/Presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.
+<li><p>By the end of 4rd week (10/16/20): <a href="IPM/presentation.pdf">Applications of convex optimization in metabolic network analysis</a>.
 
 
 
@@ -65,7 +65,7 @@ MathJax.Hub.Config({
 </ol>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-01 21:14:40 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-01 21:24:40 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
