--- a/bio/projects.html
+++ b/bio/projects.html
@@ -62,11 +62,11 @@ MathJax.Hub.Config({
 <p>Strategies to engineer the collective behavior of bacterial populations, for example, the gut microbiome, are far less evident than strain design methods in synthetic biology. One reason may be the lack of necessary tools to tackle this challenge in the current models which are mostly based on multi-criterion optimization, game theory, and cellular automata.</p>
 <h3>Optimization-based approaches vs data-driven frameworks</h3>
 <p>Reviewing the different algorithms in each one of these two categories and comparing the cons and pros of each one can pave the way for designing the next-generation of constraint-based methods. Do living organisms always behave extremely optimal or can they be described by a set of constraints and rules instead of a final goal?</p>
-<h3>Integration of metabolite densities in metabolic network models</h3>
-<p>In many cases, the available data is in the form of metabolite densities instead of flux measurements, for instance, the glucose density in a bacterial culture medium or biomarkers in the blood of a cancer patient. What is the state-of-the-art in the integration of metabolite density and reaction flux information?</p>
+<h3>Integration of metabolite concentrations in metabolic network models</h3>
+<p>In many real-world scenarios, the available data is in the form of metabolite densities instead of flux measurements, for instance, the glucose concentration in a bacterial culture medium or biomarkers in the blood of a cancer patient. What is the state-of-the-art in the integration of metabolite concentration and reaction flux information?</p>
 <div id="footer">
 <div id="footer-text">
-Page generated 2020-10-01 21:24:40 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
+Page generated 2020-10-02 10:03:17 Iran Standard Time, by <a href="https://github.com/wsshin/jemdoc_mathjax" target="blank">jemdoc+MathJax</a>.
 </div>
 </div>
 </td>
